infrastructure/configs/development/monitoring/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana-httproute
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - grafana.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-prometheus-httproute
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - prometheus.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
